--- a/projects/project2/style.css
+++ b/projects/project2/style.css
@@ -1,5 +1,5 @@
 body{
 height:100vh;
 width:100%;
-background-image: linear-gradient(90deg,#903FD8,#1B1A1C);
+background-color: linear-gradient(90deg,#1B1A1C,#903FD8);
 }
