--- a/projects/project2/style.css
+++ b/projects/project2/style.css
@@ -1,8 +1,9 @@
 body{
-height:100vh;
-width:100%;
+height: 100vh;
+width: 100%;
 background-color: linear-gradient(90deg,#1B1A1C,#903FD8);
-color:#FFFFFF;
+color: #FFFFFF;
 text-align: center;
-margin:50%;
+margin: 50%;
+padding: 10%;
 }
