--- a/projects/project1/style.css
+++ b/projects/project1/style.css
@@ -2,10 +2,8 @@ body{
   height: 100vh;
   width: 100%;
   background-image: linear-gradient(90deg,#1B1A1C,#903FD8);
-}
-h1,p{
   color:#ffffff;
   text-align:center;
-  margin:50%;
-  padding:5%;
+ /* margin:50%;
+  padding:5%; */
 }
