--- a/projects/project1/style.css
+++ b/projects/project1/style.css
@@ -1,5 +1,5 @@
 body{
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-image: linear-gradient(90deg,#1B1A1C,#903FD8);
   color:#ffffff;
